[package]
name = "kiseki-raft"
description = "Shared Raft type configuration and network transport for Kiseki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { path = "../kiseki-common" }
openraft = { workspace = true }
serde = { version = "1", features = ["derive"] }
tokio = { workspace = true }
