[package]
name = "kiseki-raft"
description = "Shared Raft type configuration and network transport for Kiseki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { workspace = true }
futures = "0.3"
openraft = { workspace = true }
redb = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
