[package]
name = "kiseki-raft"
description = "Shared Raft type configuration and network transport for Kiseki."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { workspace = true }
arc-swap = "1.7"
async-trait = { workspace = true }
dashmap = "6"
futures = "0.3"
openraft = { workspace = true }
redb = "4"
serde = { version = "1", features = ["derive"] }
thiserror = { workspace = true }
serde_json = "1"
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
