[package]
name = "kiseki-server"
description = "Kiseki storage server binary — composes all Rust crates."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[[bin]]
name = "kiseki-server"
path = "src/main.rs"

[[bin]]
name = "kiseki-admin"
path = "src/bin/kiseki_admin.rs"

[dependencies]
kiseki-common = { workspace = true }
kiseki-crypto = { workspace = true }
kiseki-transport = { workspace = true }
kiseki-log = { workspace = true }
kiseki-keymanager = { workspace = true }
kiseki-audit = { workspace = true }
kiseki-backup = { workspace = true }
kiseki-tracing = { workspace = true }
kiseki-chunk = { workspace = true }
kiseki-chunk-cluster = { workspace = true }
kiseki-composition = { workspace = true }
kiseki-view = { workspace = true }
kiseki-gateway = { workspace = true }
kiseki-client = { workspace = true }
kiseki-advisory = { workspace = true }
kiseki-control = { workspace = true }
kiseki-proto = { workspace = true }
async-trait = { workspace = true }
axum = "0.8"
libc = { workspace = true }
hyper = { version = "1", features = ["server", "http1"] }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
prometheus = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
