[package]
name = "kiseki-transport"
description = "Pluggable transport layer for Kiseki: TCP+TLS (mTLS), with feature-flagged CXI and RDMA verbs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
# libfabric/CXI transport for Slingshot fabric (requires libfabric-dev).
cxi = ["serde", "serde_json"]
# RDMA verbs transport (requires rdma-core / libibverbs-dev).
verbs = ["serde", "serde_json"]

[dependencies]
kiseki-common = { workspace = true }
aws-lc-rs = { workspace = true }
libc = { workspace = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "io-util", "net"] }
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rcgen = "0.13"
proptest = { workspace = true }
serde_json = "1"
tempfile = "3"
