[package]
name = "kiseki-view"
description = "View Materialization for Kiseki: stream processor, MVCC pins, staleness tracking."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kiseki-common = { workspace = true }
kiseki-log = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
